removed dropdown logo

--- a/index.html
+++ b/index.html
@@ -2,5 +2,9 @@
 layout: page
 title: Give Gifts People Will Actually Use.
 description: Send digital gifts easily to friends.
+image:
+  feature: so-simple-sample-image-2.jpg
+  credit: Michael Rose
+  creditlink: http://mademistakes.com
 ---
 
