--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 ---
 layout: page
-title: Give Gifts People Will Actually Use.
+title: Items
 description: Send digital gifts easily to friends.
 image:
-  feature: so-simple-sample-image-2.jpg
-  credit: Michael Rose
-  creditlink: http://mademistakes.com
+  feature: landing.jpg
 ---
 
