got jekyllgallerytag working

--- a/index.html
+++ b/index.html
@@ -6,3 +6,25 @@ image:
   feature: landing.jpg
 ---
 
+{% gallery galleryname %}
+asana.jpg
+birchbox.jpeg
+craftcoffee.jpeg
+dropbox.png
+dsc.jpg
+evernote.png
+fancyhands.jpeg
+freckle.png
+hbo.jpeg
+hulu.png
+landing.jpg
+lumosity.jpeg
+lynda.jpeg
+netflix.png
+pandora.png
+prime.jpg
+spotify.png
+trello.png
+uber.jpeg
+udemy.png
+{% endgallery %}
