fixed images/services not compiling error

--- a/index.html
+++ b/index.html
@@ -10,21 +10,19 @@ image:
 asana.jpg
 birchbox.jpeg
 craftcoffee.jpeg
-dropbox.png
 dsc.jpg
-evernote.png
+evernote.jpg
 fancyhands.jpeg
-freckle.png
+freckle.jpg
 hbo.jpeg
-hulu.png
-landing.jpg
+hulu.jpg
 lumosity.jpeg
 lynda.jpeg
-netflix.png
-pandora.png
+netflix.jpg
+pandora.jpg
 prime.jpg
-spotify.png
-trello.png
+spotify.jpg
+trello.jpg
 uber.jpeg
-udemy.png
+udemy.jpg
 {% endgallery %}
